--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,9 @@
 		"checkJs": true,
 		"paths": {
 			"$app/*": [".svelte/dev/runtime/app/*", ".svelte/build/runtime/app/*"],
-			"$lib/*": ["src/lib/*"]
+			"$lib/*": ["src/lib/*"],
+			"$components/*": ["src/lib/components/*"],
+			"$stores/*": ["src/lib/stores/*"]
 		}
 	},
 	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
