Changed workers:deploy and deploy names

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"dev": "svelte-kit dev --host --port 5000",
 		"cache:delete": "rmdir /S /Q build && rmdir /S /Q .svelte-kit",
-		"workers:deploy": "npm run cache:delete && npm run build && wrangler publish",
+		"deploy:clean": "npm run cache:delete && npm run build && wrangler publish",
 		"deploy": "npm run build && wrangler publish",
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview --host",
