--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"@sveltejs/adapter-cloudflare-workers": "next",
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
+		"@typescript-eslint/eslint-plugin": "^4.28.3",
+		"@typescript-eslint/parser": "^4.28.3",
 		"autoprefixer": "^10.2.5",
 		"babel-loader": "^8.2.2",
 		"cssnano": "^4.1.10",
@@ -31,9 +33,9 @@
 		"svelte": "^3.38.2",
 		"svelte-check": "^1.5.1",
 		"svelte-loader": "^3.1.1",
-		"svelte-preprocess": "^4.6.9",
-		"tslib": "^2.2.0",
-		"typescript": "^4.2.3",
+		"svelte-preprocess": "^4.7.4",
+		"tslib": "^2.3.0",
+		"typescript": "^4.3.5",
 		"vite": "^2.1.0"
 	},
 	"type": "module",
