feat: added transition on artist page header perf: improved song loading performance

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,12 @@
 {
-	"tabWidth": 4,
+	"tabWidth": 2,
 	"useTabs": true,
 	"trailingComma": "none",
 	"singleQuote": true,
 	"semi": false,
 	"printWidth": 80,
+	"bracketSpacing": true,
+
 	"svelteBracketNewLine": false,
 	"svelteSortOrder": "scripts-markup-styles"
 }
