--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     name: Deploy
     steps:
+     - uses: actions/checkout@v2
+     - uses: actions/setup-node@v2
+       with:
+          node-version: 16
+     - uses: bahmutov/npm-install@v1
      - name: Build site
        run: 'npm run build'
      - name: Publish
