--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"moduleResolution": "node",
 		"module": "es2020",
-		"lib": ["es2020"],
+		"lib": ["es2020", "dom", "dom.iterable"],
 		"target": "ES2019",
 		/**
 			svelte-preprocess cannot figure out whether you have a value or a type, so tell TypeScript
