[feat] + Local library - WebRTC p2p data sync, possibly? [fix] Fixed carousel image rendering bug

--- a/.env.EXAMPLE
+++ b/.env.EXAMPLE
@@ -1,2 +1,4 @@
 VITE_DOMAIN ="example.xyz"
 VITE_SITE_URL="https://example.xyz"
+VITE_DETA_KEY="ad0a0w9dj_20d0z90zjdwk_EXAMPLE_KEY"
+VITE_DETA_URL="https://database.deta.sh/v1/PROJECT_ID/BASE_NAME"
