--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"autoprefixer": "^10.2.5",
 		"babel-loader": "^8.2.2",
 		"cssnano": "^4.1.10",
+		"deta": "^1.0.0",
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.1.0",
