--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
 		"autoprefixer": "^10.2.5",
 		"babel-loader": "^8.2.2",
 		"cssnano": "^4.1.10",
-		"deta": "^1.0.0",
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.1.0",
@@ -38,13 +37,15 @@
 		"svelte-preprocess": "^4.7.4",
 		"tslib": "^2.3.0",
 		"typescript": "^4.3.5",
-		"vite": "^2.1.0"
+		"vite": "^2.1.0",
+		"vite-plugin-iso-import": "^0.1.1"
 	},
 	"type": "module",
 	"engines": {
 		"node": ">= 12.17.0"
 	},
 	"dependencies": {
-		"@fontsource/commissioner": "^4.5.0"
+		"@fontsource/commissioner": "^4.5.0",
+		"peerjs": "^1.3.2"
 	}
 }
