--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.1.0",
+		"peerjs": "^1.3.2",
 		"postcss": "^8.2.7",
 		"postcss-load-config": "^3.0.1",
 		"postcss-uncss": "^0.17.0",
@@ -45,7 +46,6 @@
 		"node": ">= 12.17.0"
 	},
 	"dependencies": {
-		"@fontsource/commissioner": "^4.5.0",
-		"peerjs": "^1.3.2"
+		"@fontsource/commissioner": "^4.5.0"
 	}
 }
