--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-	"npm-scripts.showStartNotification": false,
-	"px-to-rem.px-per-rem": 14,
 	"svg.preview.background": "custom",
-	"editor.quickSuggestions": null
+	"editor.quickSuggestions": null,
+	"typescript.enablePromptUseWorkspaceTsdk": true,
+	"eslint.probe": ["javascript", "typescript", "html", "markdown", "svelte"]
 }
