--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
 	"compilerOptions": {
+		"plugins": [{ "name": "vite-plugin-iso-import" }],
 		"moduleResolution": "node",
 		"module": "es2020",
-		"lib": ["es2020", "dom", "dom.iterable"],
-		"target": "ES2019",
+		"lib": ["es2020", "DOM"],
+		"target": "es2019",
 		/**
 			svelte-preprocess cannot figure out whether you have a value or a type, so tell TypeScript
 			to enforce using \`import type\` instead of \`import\` for Types.
@@ -21,7 +22,10 @@
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
 		"baseUrl": ".",
+		"allowSyntheticDefaultImports": true,
+		"experimentalDecorators": true,
 
+		"emitDecoratorMetadata": true,
 		"allowJs": true,
 		"checkJs": true,
 		"paths": {
@@ -30,8 +34,14 @@
 			"$components/*": ["src/lib/components/*"],
 			"$stores/*": ["src/lib/stores/*"],
 			"$api/*": ["src/routes/api/*"]
-		},
-		"plugins": [{ "name": "vite-plugin-iso-import" }]
+		}
 	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
+	"include": [
+		"src/**/*.d.ts",
+		"src/**/*.js",
+		"src/**/*.ts",
+		"src/**/*.svelte",
+		"src/routes/library/_peer.cjs"
+	],
+	"exclude": [".svelte/*", ".svelte-kit/*", "build/*"]
 }
