--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ src/routes/trending/test/index.json.ts
 src/routes/trending/test/index.svelte
 package-lock.json
 package-lock.json
+.sveltegen.json
