[NEW] WebM audio support - Changed the way dropdowns/popup menus work - Added fade in transition to Artist Page Header - Restructured Carousel Item - Added Settings store - Restructured IndexedDB module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,6 @@
 		"src/**/*.ts",
 		"src/**/*.svelte",
 		"src/routes/library/_peer.cjs"
-	],
+, "global.d.ts"	],
 	"exclude": [".svelte/*", ".svelte-kit/*", "build/*"]
 }
