--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
 	"useTabs": true,
 	"trailingComma": "none",
 	"singleQuote": true,
-	"semi": false,
+	"semi": true,
 	"printWidth": 80,
 	"bracketSpacing": true,
 
