--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,12 +30,5 @@
 			"$api/*": ["src/routes/api/*"]
 		}
 	},
-	"include": [
-		"src/**/*.d.ts",
-		"src/**/*.js",
-		"src/**/*.ts",
-		"src/**/*.svelte",
-		"global.d.ts"
-	],
-	"exclude": [".svelte/*", ".svelte-kit/*", "build/*"]
+	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
 }
