...rest of last commit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,6 @@
 			"$api/*": ["src/routes/api/*"]
 		}
 	},
+	"extends": "./.svelte-kit/tsconfig.json",
 	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
 }
