Begin rewrite process (moving to new branch). Update README.md Rewrote list store Slight performance gains.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
 		"paths": {
 			"$app/*": [".svelte/dev/runtime/app/*", ".svelte/build/runtime/app/*"],
 			"$lib/*": ["src/lib/*"],
+			"$lib": ["src/lib"],
 			"$components/*": ["src/lib/components/*"],
 			"$stores/*": ["src/lib/stores/*"],
 			"$api/*": ["src/routes/api/*"]
