Improved spacing and sizing for UI Performance gains for carousels Updated Array utility functions Added Object utility functions Begin modularization of API Artist Release pages now work Prevent status 500 during Artist parsing Start replacing native Array methods with custom ones (perf.) Tweaked popper button behavior

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
 	"typescript.enablePromptUseWorkspaceTsdk": true,
 	"eslint.probe": ["javascript", "typescript", "html", "markdown", "svelte"],
 
-	"exportall.config.folderListener": ["/src/lib/utils"]
+	"exportall.config.folderListener": []
 }
