--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/adapter-cloudflare-workers": "next",
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
+		"@types/node": "^17.0.23",
 		"@typescript-eslint/eslint-plugin": "^4.28.3",
 		"@typescript-eslint/parser": "^4.28.3",
 		"autoprefixer": "^10.2.5",
@@ -28,6 +29,7 @@
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.1.0",
+		"node-fetch": "^3.2.3",
 		"peerjs": "^1.3.2",
 		"postcss": "^8.2.7",
 		"postcss-load-config": "^3.0.1",
