--- a/app/.env.EXAMPLE
+++ b/app/.env.EXAMPLE
@@ -1,3 +1,4 @@
-VITE_DOMAIN ="example.xyz"
-VITE_SITE_URL="https://example.xyz"
-VITE_DONATION_URL="https://www.paypal.com/"
+VITE_DOMAIN="beatbump.ml"
+VITE_SITE_URL="https://beatbump.ml"
+VITE_DONATION_URL="https://www.paypal.com/donate/?hosted_button_id=E6YRHKS2H2KP2"
+PORT=3000
