`proxy-server/rust` - created base project `proxy-server/deno` - Fixed connection close crash `app` - - fixed HTTP streaming, rewrote Settings page, more typing - Optimized Carousels - Fixed ArtistPageHeader not finding container - Start rewriting global SCSS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
 	"editor.formatOnSave": true,
 	"deno.enable": false,
 	"npm.autoDetect": "on",
-
+"npm.enableRunFromFolder": true,
+"npm-intellisense.recursivePackageJsonLookup": true,
 	"json.schemas": [
 		{
 			"url": "./.vscode/schema.json",
