--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,2 @@
-custom: ['https://www.paypal.com/donate/?hosted_button_id=E6YRHKS2H2KP2', 'https://www.buymeacoffee.com/snuffydev', 'https://ko-fi.com/snuffydev']
+custom: ['https://www.paypal.com/donate/?hosted_button_id=E6YRHKS2H2KP2', 'https://www.buymeacoffee.com/snuffydev']
+ko_fi: snuffydev
