Improved Docker support (?)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,13 +4,13 @@
 	"editor.formatOnSave": true,
 	"deno.enable": false,
 	"npm.autoDetect": "on",
-"npm.enableRunFromFolder": true,
-"npm-intellisense.recursivePackageJsonLookup": true,
+	"npm.enableRunFromFolder": true,
+	"npm-intellisense.recursivePackageJsonLookup": true,
 	"json.schemas": [
 		{
 			"url": "./.vscode/schema.json",
 			"fileMatch": ["/app/beatbump.conf.json"]
 		}
 	],
-	"typescript.tsdk": "node_modules\\typescript\\lib"
+	"typescript.tsdk": "./app/node_modules\\typescript\\lib"
 }
