--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
 		"cssnano-preset-default": "^5.2.12",
 		"dashjs": "^4.4.1",
 		"dotenv": "^16.0.1",
+		"esbuild": "^0.15.6",
 		"eslint": "^8.19.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-import-resolver-typescript": "^3.4.0",
@@ -51,10 +52,12 @@
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.4",
-		"vite": "^3.0.0"
+		"vite": "^3.0.0",
+		"vite-plugin-comlink": "^3.0.4"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/commissioner": "^4.5.7"
+		"@fontsource/commissioner": "^4.5.7",
+		"comlink": "^4.3.1"
 	}
 }
