--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -56,6 +56,7 @@ jobs:
           images: snuffydev/beatbump
           
       - name: Build and push Docker image
+        id: build-and-push
 
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
 
