--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,35 +26,29 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
-        
-      # Install the cosign tool except on PR
-      # https://github.com/sigstore/cosign-installer
-      - name: Install cosign
-        if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@7e0881f8fe90b25e305bbf0309761e9314607e25
         with:
-          cosign-release: 'v1.9.0'
+          fetch-depth: 1
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
 
       - name: Log in to Docker Hub
         if: github.event_name != 'pull_request'
-
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Extract metadata (tags, labels) for Docker
-
-        id: meta
-
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-
-        with:
-          images: snuffydev/beatbump
           
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: docker.io/snuffydev/beatbump
+          tags: type=sha,format=long
+  
       - name: Build and push Docker image
         id: build-and-push
 
@@ -69,11 +63,3 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
 
           labels: ${{ steps.meta.outputs.labels }}
-      - name: Sign the published Docker image
-        if: ${{ github.event_name != 'pull_request' }}
-        env:
-          COSIGN_EXPERIMENTAL: "true"
-        # This step uses the identity token to provision an ephemeral certificate
-        # against the sigstore community Fulcio instance.
-        run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push.outputs.digest }}
-
