--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -51,9 +51,8 @@ jobs:
             type=schedule
             type=ref,event=branch
             type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=edge,enable=true,priority=700,prefix=,suffix=,branch=$repo.default_branch
             type=sha
   
       - name: Build and push Docker image
