--- a/app/.dockerignore
+++ b/app/.dockerignore
@@ -1,9 +1,11 @@
-node_modules/
+node_modules
 npm-debug.log
-workers-site/
-dist/
-.vercel/
-.vercel_build_output/
-.cloudflare/
-.netlify/
-.svelte-kit/
+workers-site
+dist
+.vercel
+.vercel_build_output
+.cloudflare
+.netlify
+.svelte-kit
+docs
+build
