--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
@@ -50,10 +50,10 @@ jobs:
           tags: |
             type=schedule
             type=ref,event=branch
-            type=ref,event=pr
+						type=raw,value=latest,enable={{is_default_branch}}
             type=edge,enable=true,priority=700,prefix=,suffix=,branch=$repo.default_branch
             type=sha
-  
+
       - name: Build and push Docker image
         id: build-and-push
 
