--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,6 +5,13 @@ on:
     - cron: "0 0 * * *"
   push:
     branches: ["master"]
+    # Publish semver tags as releases.name: Publish Docker image
+
+on:
+  schedule:
+    - cron: "0 0 * * *"
+  push:
+    branches: ["master"]
     # Publish semver tags as releases.
     tags: ["v*.*.*"]
   pull_request:
@@ -51,6 +58,69 @@ jobs:
             type=schedule
             type=ref,event=branch
 						type=raw,value=latest,enable={{is_default_branch}}
+            type=edge,enable=true,priority=700,prefix=,suffix=,branch=$repo.default_branch
+            type=sha
+
+      - name: Build and push Docker image
+        id: build-and-push
+
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+
+        with:
+          context: ./app
+
+          build-args: PORT=3000
+          push: ${{ github.event_name != 'pull_request' }}
+
+          tags: ${{ steps.meta.outputs.tags }}
+
+          labels: ${{ steps.meta.outputs.labels }}
+
+    tags: ["v*.*.*"]
+  pull_request:
+    branches: ["master"]
+  release:
+    types: [published]
+
+jobs:
+  push_to_registry:
+    name: Push Docker image to Docker Hub
+
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      # This is used to complete the identity challenge
+      # with sigstore/fulcio when running outside of PRs.
+      id-token: write
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Setup Docker buildx
+        uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
+
+      - name: Log in to Docker Hub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: docker.io/snuffydev/beatbump
+          tags: |
+            type=schedule
+            type=ref,event=branch
+            type=ref,event=pr
             type=edge,enable=true,priority=700,prefix=,suffix=,branch=$repo.default_branch
             type=sha
 
