--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,9 @@ services:
       VITE_DOMAIN: "beatbump.ml"
       VITE_SITE_URL: "https://beatbump.ml"
       VITE_DONATION_URL: "https://www.paypal.com/donate/?hosted_button_id=E6YRHKS2H2KP2"
-    restart: unless-stopped
+  proxy:
+    build:
+      context: ./packages/proxy-server/deno
+      dockerfile: Dockerfile
+    ports:
+      - "3001:3001"
